2019-03-07  Youri Hoogstrate (v0.4.0)
    * Adds `-s / --spliced-reads-only` argument to detect only exon1-2 and exon1-8 spliced reads.

2019-02-18  Youri Hoogstrate (v0.3.0)
    * Exclude corner-case ambiguous reads (and become more backwards compatible with v0.1.0).

2019-02-18  Youri Hoogstrate (v0.2.0)
    * Much more efficient way of determining vIII, huge performance improvements.

2019-02-06  Youri Hoogstrate (v0.1.0)
    * First working prototype, including a functional test